@@ -1,3 +1,8 @@
+2004-03-04 Braden McDaniel  <braden@endoframe.com>
+
+	* src/lookat/lookat.cpp:  Fixed unnecesary redundant calls to
+	openvrml::gl::viewer::input.
+
 2004-03-02 Braden McDaniel  <braden@endoframe.com>
 
 	* m4/acx_pthread.m4:  Updated to most recent version of the
